@@ -1,5 +1,10 @@
 2007-01-02  Danilo Šegan  <danilo@gnome.org>
 
+	* gnome-modules.xml.in: Added docs for gconf-editor,
+	gnome-utils, bug-buddy, gdm2, gnome-keyring-manager,
+	gnome-system-tools, gnome-panel, sound-juicer, gnome-desktop.
+	Added gfloppy, release-notes modules.
+
 	* releases.py (Releases.list_modules): Set svnmodule.
 
 	* gnome-modules.xml.in: Updated.
